rocket/measurements/verilator-dual-small-v1.6-O3/sim-perf.txt
START: Current timestamp in milliseconds: 1731323122762
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.fir:1:1: error: expected 'FIRRTL'
circuit RocketSystem :
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.sv':

             19.72 msec task-clock:u                     #    0.982 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,304      page-faults:u                    #  116.827 K/sec                     
         8,384,996      cycles:u                         #    0.425 GHz                         (10.54%)
         5,230,077      stalled-cycles-frontend:u        #   62.37% frontend cycles idle        (25.75%)
       141,814,575      instructions:u                   #   16.91  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (40.91%)
        28,807,745      branches:u                       #    1.461 G/sec                       (56.13%)
           452,487      branch-misses:u                  #    1.57% of all branches             (71.26%)
        62,072,012      L1-dcache-loads:u                #    3.147 G/sec                       (75.93%)
         4,892,987      L1-dcache-load-misses:u          #    7.88% of all L1-dcache accesses   (74.25%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,030,664      L1-icache-loads:u                #   52.261 M/sec                       (59.09%)
            10,238      L1-icache-load-misses:u          #    0.99% of all L1-icache accesses   (43.87%)
            69,136      dTLB-loads:u                     #    3.506 M/sec                       (28.74%)
            20,288      dTLB-load-misses:u               #   29.35% of all dTLB cache accesses  (13.52%)
     <not counted>      iTLB-loads:u                                                            (0.00%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.020084981 seconds time elapsed

       0.016590000 seconds user
       0.003332000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-dual-small-v1.6-O3-simperf/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-dual-small-v1.6-O3-simperf//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             59.64 msec task-clock:u                     #    1.470 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,254      page-faults:u                    #   71.332 K/sec                     
       160,128,786      cycles:u                         #    2.685 GHz                         (55.57%)
        21,421,932      stalled-cycles-frontend:u        #   13.38% frontend cycles idle        (49.67%)
       374,414,562      instructions:u                   #    2.34  insn per cycle            
                                                  #    0.06  stalled cycles per insn     (15.18%)
        47,303,029      branches:u                       #  793.191 M/sec                       (36.28%)
         1,819,781      branch-misses:u                  #    3.85% of all branches             (46.30%)
       102,531,521      L1-dcache-loads:u                #    1.719 G/sec                       (46.44%)
         2,216,658      L1-dcache-load-misses:u          #    2.16% of all L1-dcache accesses   (46.10%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        29,083,890      L1-icache-loads:u                #  487.687 M/sec                       (45.87%)
           447,265      L1-icache-load-misses:u          #    1.54% of all L1-icache accesses   (45.59%)
           543,292      dTLB-loads:u                     #    9.110 M/sec                       (45.68%)
            23,096      dTLB-load-misses:u               #    4.25% of all dTLB cache accesses  (50.68%)
           446,321      iTLB-loads:u                     #    7.484 M/sec                       (65.47%)
            13,195      iTLB-load-misses:u               #    2.96% of all iTLB cache accesses  (60.57%)
           767,903      L1-dcache-prefetches:u           #   12.876 M/sec                       (55.69%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.040564984 seconds time elapsed

       0.037624000 seconds user
       0.021863000 seconds sys


GROUP: verilator SUBGROUP: clang
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
